kustomize/base/app/rpc-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpc-server
spec:
  ports:
    - port: 50051
      targetPort: 50051
      name: rpc
