kustomize/base/app/rpc-server/postgres-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: postgres
  namespace: rpc
spec:
  hosts:
  - postgres-rw.postgres.svc.cluster.local
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: postgres-rw.postgres.svc.cluster.local
        port:
          number: 5432
